<resources>
    <string name="app_name">Just Java</string>

    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="name_required">Name required</string>
    <string name="email_subject">Just Java order for %s</string>
    <string name="order_name">Name: %s</string>
    <string name="order_cream">Add whipped cream? %s</string>
    <string name="order_choco">Add whipped cream? %s</string>
    <string name="order_quantity">Quantity: %d</string>
    <string name="order_total">Total: $%d</string>
    <string name="thank_you">Thank you!</string>
</resources>
