<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="16dp"
        android:text="@string/toppings"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="8dp"
        android:text="@string/whipped_cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="8dp"
        android:text="@string/chocolate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whipped_cream_checkbox" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chocolate_checkbox" />

    <Button
        android:id="@+id/increment_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="8dp"
        android:onClick="increment"
        android:text="+"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/quantity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="2"
        app:layout_constraintBottom_toBottomOf="@+id/increment_button"
        app:layout_constraintStart_toEndOf="@+id/increment_button"
        app:layout_constraintTop_toTopOf="@+id/increment_button" />

    <Button
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="decrement"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/quantity_textview"
        app:layout_constraintStart_toEndOf="@+id/quantity_textview"
        app:layout_constraintTop_toTopOf="@+id/quantity_textview" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="16dp"
        android:onClick="order"
        android:text="@string/order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increment_button" />

</androidx.constraintlayout.widget.ConstraintLayout>